--- a/index.html
+++ b/index.html
@@ -91,6 +91,88 @@
             50% { transform: translate(150px, -150px) scale(1.1); }
         }
 
+        /* Floating Icons Background */
+        .floating-icons {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: 0;
+            overflow: hidden;
+        }
+
+        .floating-icon {
+            position: absolute;
+            font-size: 40px;
+            color: rgba(147, 51, 234, 0.08);
+            animation: floatIcon 20s ease-in-out infinite;
+        }
+
+        .floating-icon:nth-child(1) {
+            top: 10%;
+            left: 10%;
+            animation-delay: 0s;
+            animation-duration: 25s;
+        }
+
+        .floating-icon:nth-child(2) {
+            top: 60%;
+            left: 80%;
+            animation-delay: 3s;
+            animation-duration: 30s;
+        }
+
+        .floating-icon:nth-child(3) {
+            top: 30%;
+            left: 70%;
+            animation-delay: 1.5s;
+            animation-duration: 22s;
+            color: rgba(220, 38, 38, 0.08);
+        }
+
+        .floating-icon:nth-child(4) {
+            top: 80%;
+            left: 20%;
+            animation-delay: 4s;
+            animation-duration: 28s;
+        }
+
+        .floating-icon:nth-child(5) {
+            top: 40%;
+            left: 30%;
+            animation-delay: 2s;
+            animation-duration: 26s;
+            color: rgba(220, 38, 38, 0.08);
+        }
+
+        .floating-icon:nth-child(6) {
+            top: 70%;
+            left: 60%;
+            animation-delay: 5s;
+            animation-duration: 24s;
+        }
+
+        @keyframes floatIcon {
+            0%, 100% {
+                transform: translate(0, 0) rotate(0deg);
+                opacity: 0.8;
+            }
+            25% {
+                transform: translate(30px, -30px) rotate(90deg);
+                opacity: 0.5;
+            }
+            50% {
+                transform: translate(-20px, 40px) rotate(180deg);
+                opacity: 1;
+            }
+            75% {
+                transform: translate(40px, 20px) rotate(270deg);
+                opacity: 0.6;
+            }
+        }
+
         /* Navigation */
         nav {
             position: fixed;
@@ -155,40 +237,39 @@
         /* Music Player */
         .music-player {
             position: fixed;
-            bottom: 40px;
-            right: 40px;
+            top: 90px;
+            right: 30px;
             background: rgba(17, 17, 17, 0.95);
             backdrop-filter: blur(30px) saturate(180%);
-            padding: 25px 30px;
-            border-radius: 20px;
+            padding: 15px 20px;
+            border-radius: 15px;
             z-index: 1000;
             border: 1px solid rgba(147, 51, 234, 0.3);
-            box-shadow: 0 20px 60px rgba(147, 51, 234, 0.4);
+            box-shadow: 0 10px 30px rgba(147, 51, 234, 0.4);
             transition: all 0.4s ease;
-            min-width: 320px;
+            min-width: 200px;
         }
 
         .music-player:hover {
-            transform: translateY(-8px);
-            box-shadow: 0 25px 70px rgba(147, 51, 234, 0.6);
+            box-shadow: 0 15px 40px rgba(147, 51, 234, 0.6);
             border-color: var(--purple);
         }
 
         .track-info {
-            margin-bottom: 20px;
+            margin-bottom: 12px;
             text-align: center;
         }
 
         .track-title {
-            font-size: 18px;
+            font-size: 14px;
             font-weight: 800;
             color: var(--white);
-            margin-bottom: 6px;
+            margin-bottom: 4px;
             letter-spacing: -0.5px;
         }
 
         .track-artist {
-            font-size: 13px;
+            font-size: 11px;
             color: var(--gray);
             font-weight: 600;
         }
@@ -197,29 +278,28 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 20px;
-            margin-bottom: 18px;
+            gap: 12px;
         }
 
         .play-btn {
-            width: 56px;
-            height: 56px;
+            width: 40px;
+            height: 40px;
             border-radius: 50%;
             background: linear-gradient(135deg, var(--purple), var(--red));
             border: none;
             color: white;
             cursor: pointer;
-            font-size: 22px;
+            font-size: 16px;
             display: flex;
             align-items: center;
             justify-content: center;
             transition: all 0.3s ease;
-            box-shadow: 0 8px 24px rgba(147, 51, 234, 0.4);
+            box-shadow: 0 4px 16px rgba(147, 51, 234, 0.4);
         }
 
         .play-btn:hover {
             transform: scale(1.1);
-            box-shadow: 0 12px 32px rgba(147, 51, 234, 0.6);
+            box-shadow: 0 8px 20px rgba(147, 51, 234, 0.6);
         }
 
         .play-btn:active {
@@ -229,19 +309,19 @@
         .volume-control {
             display: flex;
             align-items: center;
-            gap: 12px;
+            gap: 8px;
         }
 
         .volume-control i {
             color: var(--purple);
-            font-size: 18px;
+            font-size: 14px;
         }
 
         .volume-slider {
-            width: 110px;
-            height: 6px;
+            width: 70px;
+            height: 4px;
             background: rgba(255, 255, 255, 0.1);
-            border-radius: 3px;
+            border-radius: 2px;
             outline: none;
             -webkit-appearance: none;
             cursor: pointer;
@@ -249,12 +329,12 @@
 
         .volume-slider::-webkit-slider-thumb {
             -webkit-appearance: none;
-            width: 18px;
-            height: 18px;
+            width: 14px;
+            height: 14px;
             background: linear-gradient(135deg, var(--purple), var(--red));
             border-radius: 50%;
             cursor: pointer;
-            box-shadow: 0 4px 12px rgba(147, 51, 234, 0.5);
+            box-shadow: 0 2px 8px rgba(147, 51, 234, 0.5);
         }
 
         /* Hero Section */
@@ -657,9 +737,9 @@
 
             .music-player {
                 min-width: auto;
-                right: 25px;
-                bottom: 25px;
-                padding: 20px 25px;
+                right: 20px;
+                top: 80px;
+                padding: 12px 16px;
             }
 
             section {
@@ -673,6 +753,16 @@
     <div class="grid-bg"></div>
     <div class="glow-orb glow-orb-1"></div>
     <div class="glow-orb glow-orb-2"></div>
+    
+    <!-- Floating Icons -->
+    <div class="floating-icons">
+        <i class="floating-icon fas fa-wand-magic-sparkles"></i>
+        <i class="floating-icon fas fa-code"></i>
+        <i class="floating-icon fas fa-bolt"></i>
+        <i class="floating-icon fas fa-fire"></i>
+        <i class="floating-icon fas fa-star"></i>
+        <i class="floating-icon fas fa-sparkles"></i>
+    </div>
 
     <!-- Navigation -->
     <nav>
@@ -704,7 +794,7 @@
     <section class="hero" id="home">
         <div class="hero-content">
             <div class="profile-pic">
-                <img src="https://cdn.discordapp.com/attachments/1394015159554670632/1466877962384048389/image.png?ex=697e580f&is=697d068f&hm=143b5bc5790384aaf0c8ab9013bf9b1b9fee54b927e9da996ad57d95c111c811&" alt="Oasis Profile">
+                <img src="https://cdn.discordapp.com/attachments/1394015159554670632/1466878066889588843/2Q.png?ex=697e5828&is=697d06a8&hm=432690fb054d86ff0d86d51161b9ffdc47e91f699054402b457185fc6bc883d0&" alt="Oasis Profile">
             </div>
             
             <h1>Oasis</h1>
@@ -715,13 +805,13 @@
                 <a href="https://www.tiktok.com/@oasisalt" target="_blank" class="social-link">
                     <i class="fab fa-tiktok"></i>
                 </a>
-                <a href="#" class="social-link">
+                <a href="https://discord.gg/S9enkFGZ" target="_blank" class="social-link">
                     <i class="fab fa-discord"></i>
                 </a>
                 <a href="#" class="social-link">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="#" class="social-link">
+                <a href="mailto:contact@oasis.dev" class="social-link">
                     <i class="fas fa-envelope"></i>
                 </a>
             </div>
@@ -733,7 +823,7 @@
 
     <!-- Aizen Image Section - Before Work -->
     <section class="aizen-section">
-        <img src="https://cdn.discordapp.com/attachments/1394015159554670632/1466877962384048389/image.png?ex=697e580f&is=697d068f&hm=143b5bc5790384aaf0c8ab9013bf9b1b9fee54b927e9da996ad57d95c111c811&" alt="Aizen" class="aizen-image">
+        <img src="https://cdn.discordapp.com/attachments/1394015159554670632/1466878066889588843/2Q.png?ex=697e5828&is=697d06a8&hm=432690fb054d86ff0d86d51161b9ffdc47e91f699054402b457185fc6bc883d0&" alt="Aizen" class="aizen-image">
     </section>
 
     <!-- Work/Projects Section -->
