--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
     <section class="hero" id="home">
         <div class="hero-content">
             <div class="profile-pic">
-                <img src="https://cdn.discordapp.com/attachments/1394015159554670632/1466878066889588843/2Q.png?ex=697e5828&is=697d06a8&hm=432690fb054d86ff0d86d51161b9ffdc47e91f699054402b457185fc6bc883d0&" alt="Oasis Profile">
+                <img src="https://cdn.discordapp.com/attachments/1394015159554670632/1466881707465511076/image.png?ex=697e5b8c&is=697d0a0c&hm=8ef1a77619111477c2841a946394b69cccba6e4fa905fef38ac8bb5434d757d1&" alt="Oasis Profile">
             </div>
             
             <h1>Oasis</h1>
@@ -832,8 +832,8 @@
         <div class="projects-grid">
             <div class="project-card">
                 <div class="project-icon"><i class="fas fa-wand-magic-sparkles"></i></div>
-                <h3>VFX Creation</h3>
-                <p>High-quality visual effects for Roblox including particles, lighting, and environmental effects. Specializing in anime-style combat and cinematic VFX.</p>
+                <h3>VFX Designer</h3>
+                <p>Mid-Level Vfx Artist For 1 Year. Specializing in anime-style combat and cinematic/skill VFX.</p>
                 <div class="project-tags">
                     <span class="tag">VFX</span>
                     <span class="tag">Particles</span>
@@ -844,7 +844,7 @@
             <div class="project-card">
                 <div class="project-icon"><i class="fas fa-code"></i></div>
                 <h3>Lua U Scripting</h3>
-                <p>Advanced Lua U scripting for game mechanics, combat systems, and optimization. Building efficient and scalable code solutions.</p>
+                <p> Lua U scripting for game mechanics, movesets, ingame systems..</p>
                 <div class="project-tags">
                     <span class="tag">Lua U</span>
                     <span class="tag">Scripting</span>
@@ -861,24 +861,21 @@
             <div class="info-card">
                 <h3><i class="fas fa-wrench"></i> Technical Skills</h3>
                 <ul>
-                    <li>Advanced Lua U Scripting</li>
-                    <li>VFX & Particle Systems</li>
-                    <li>Roblox Studio Mastery</li>
-                    <li>Combat Systems Development</li>
+                    <li>Mid tier Lua U Scripting</li>
+                    <li>VFX</li>
+                    <li>Roblox Studio 1.5 Years</li>
                     <li>Performance Optimization</li>
-                    <li>Game Mechanics Design</li>
+                    <li>Game Mechanics/Skill Design</li>
                 </ul>
             </div>
 
             <div class="info-card">
                 <h3><i class="fas fa-star"></i> Specializations</h3>
                 <ul>
-                    <li>Custom VFX Solutions</li>
-                    <li>Advanced Scripting Systems</li>
+                    <li>Custom VFX </li>
+                    <li> Scripting Systems</li>
                     <li>Combat Mechanics</li>
                     <li>Environmental Effects</li>
-                    <li>Cinematic Tools</li>
-                    <li>System Architecture</li>
                 </ul>
             </div>
 
@@ -900,27 +897,9 @@
         <h2 class="section-title">Contributions</h2>
         <div class="contributions-grid">
             <div class="contribution-card">
-                <div class="contribution-date">Jan 8, 2025</div>
-                <h4>Shikai Complete</h4>
-                <p>Completed major VFX overhaul for Shikai system with improved particle effects and optimization.</p>
-            </div>
-
-            <div class="contribution-card">
-                <div class="contribution-date">Jan 8-9, 2025</div>
-                <h4>Bankai Moves + Cutscene</h4>
-                <p>Implemented Bankai transformation system with cinematic cutscene integration and dynamic effects.</p>
-            </div>
-
-            <div class="contribution-card">
-                <div class="contribution-date">Jan 8, 2025</div>
-                <h4>All SFX Implementation</h4>
-                <p>Integrated comprehensive sound effects system with spatial audio and dynamic mixing.</p>
-            </div>
-
-            <div class="contribution-card">
-                <div class="contribution-date">Jan 10, 2025</div>
-                <h4>Full Polish Pass</h4>
-                <p>Final optimization and polish pass on all VFX and gameplay systems.</p>
+                <div class="contribution-date">Jan 12, 2026</div>
+                <h4>Requiem </h4>
+                <p>Combat vfx, https://discord.gg/HKrqjBrh.</p>
             </div>
         </div>
     </section>
@@ -1017,3 +996,4 @@
     </script>
 </body>
 </html>
+
