--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@
             <div class="project-card">
                 <div class="project-icon"><i class="fas fa-wand-magic-sparkles"></i></div>
                 <h3>VFX Designer</h3>
-                <p>Mid-Level Vfx Artist For 1 Year. Specializing in anime-style combat and cinematic/skill VFX.</p>
+                <p>Mid-Level Vfx Artist For 11 Months Specializing in anime-style combat and /skill VFX. (Ps. Im still learning)</p>
                 <div class="project-tags">
                     <span class="tag">VFX</span>
                 </div>
@@ -1039,3 +1039,4 @@
 </body>
 
 </html>
+
