--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
 
         .banner-container {
             width: 100%;
-            max-height: 400px;
+            max-height: 280px;
             overflow: hidden;
             position: relative;
             border-top: 2px solid rgba(147, 51, 234, 0.3);
@@ -811,7 +811,7 @@
             }
 
             .banner-container {
-                max-height: 250px;
+                max-height: 180px;
             }
 
             .projects-grid,
@@ -898,7 +898,7 @@
                         <a href="#" class="social-link">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="mailto:contact@oasis.dev" class="social-link">
+                        <a href="/cdn-cgi/l/email-protection#6605090812070512260907150f1548020310" class="social-link">
                             <i class="fas fa-envelope"></i>
                         </a>
                     </div>
@@ -1001,7 +1001,7 @@
         <source src="music.mp3" type="audio/mpeg">
     </audio>
 
-    <script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         // Music Player
         const backgroundMusic = document.getElementById('backgroundMusic');
         const playBtn = document.getElementById('playBtn');
@@ -1082,11 +1082,3 @@
                 }
             });
         }, observerOptions);
-
-        document.querySelectorAll('.fade-in').forEach(element => {
-            observer.observe(element);
-        });
-    </script>
-</body>
-
-</html>
