--- a/index.html
+++ b/index.html
@@ -1082,3 +1082,11 @@
                 }
             });
         }, observerOptions);
+
+        document.querySelectorAll('.fade-in').forEach(element => {
+            observer.observe(element);
+        });
+    </script>
+</body>
+
+</html>
