--- a/index.html
+++ b/index.html
@@ -1416,8 +1416,8 @@
     <!-- Music Player -->
     <div class="music-player">
         <div class="track-info">
-            <div class="track-title">Fever</div>
-            <div class="track-artist">Buckshot</div>
+            <div class="track-title">Randomly</div>
+            <div class="track-artist">LUCKI</div>
         </div>
         <div class="music-controls">
             <button class="play-btn" id="playBtn"><i class="fas fa-play"></i></button>
@@ -2039,4 +2039,5 @@
 </body>
 
 </html>
+
 
