--- a/index.html
+++ b/index.html
@@ -38,6 +38,104 @@
             line-height: 1.6;
         }
 
+        /* Video Intro Overlay */
+        .video-intro-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.95);
+            z-index: 99999;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            animation: fadeIn 0.5s ease;
+        }
+
+        .video-intro-overlay.hide {
+            animation: washOut 1s ease forwards;
+            pointer-events: none;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+
+        @keyframes washOut {
+            0% {
+                opacity: 1;
+                transform: scale(1);
+            }
+            50% {
+                opacity: 0.7;
+                transform: scale(1.1);
+            }
+            100% {
+                opacity: 0;
+                transform: scale(1.3);
+            }
+        }
+
+        .video-intro-container {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
+        }
+
+        .intro-video {
+            max-width: 90%;
+            max-height: 90%;
+            opacity: 0.85;
+            border-radius: 20px;
+            box-shadow: 0 0 100px rgba(147, 51, 234, 0.8),
+                        0 0 200px rgba(147, 51, 234, 0.4);
+            animation: videoGlow 2s ease-in-out infinite;
+        }
+
+        @keyframes videoGlow {
+            0%, 100% {
+                box-shadow: 0 0 100px rgba(147, 51, 234, 0.8),
+                            0 0 200px rgba(147, 51, 234, 0.4);
+            }
+            50% {
+                box-shadow: 0 0 150px rgba(147, 51, 234, 1),
+                            0 0 300px rgba(147, 51, 234, 0.6);
+            }
+        }
+
+        .skip-intro {
+            position: absolute;
+            bottom: 50px;
+            right: 50px;
+            background: rgba(147, 51, 234, 0.3);
+            border: 2px solid var(--purple);
+            color: var(--white);
+            padding: 12px 25px;
+            border-radius: 10px;
+            font-size: 14px;
+            font-weight: 700;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        .skip-intro:hover {
+            background: var(--purple);
+            transform: translateY(-2px);
+            box-shadow: 0 10px 30px rgba(147, 51, 234, 0.6);
+        }
+
         /* Animated Grid Background */
         .grid-bg {
             position: fixed;
@@ -1228,6 +1326,18 @@
             section {
                 padding: 80px 30px;
             }
+
+            .intro-video {
+                max-width: 95%;
+                max-height: 70%;
+            }
+
+            .skip-intro {
+                bottom: 30px;
+                right: 30px;
+                padding: 10px 20px;
+                font-size: 12px;
+            }
         }
 
         /* Admin Panel Styles */
@@ -1261,11 +1371,6 @@
             overflow-y: auto;
             box-shadow: 0 30px 80px rgba(147, 51, 234, 0.6);
             animation: slideIn 0.4s ease;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
         }
 
         @keyframes slideIn {
@@ -1433,6 +1538,18 @@
 </head>
 
 <body>
+    <!-- Video Intro Overlay -->
+    <div class="video-intro-overlay" id="videoIntro">
+        <div class="video-intro-container">
+            <video class="intro-video" id="introVideo" autoplay muted>
+                <source src="clip.mp4" type="video/mp4">
+            </video>
+            <button class="skip-intro" onclick="skipIntro()">
+                <i class="fas fa-forward"></i> Skip Intro
+            </button>
+        </div>
+    </div>
+
     <!-- Animated Background -->
     <div class="grid-bg"></div>
     <div class="glow-orb glow-orb-1"></div>
@@ -1462,8 +1579,8 @@
     <!-- Music Player -->
     <div class="music-player">
         <div class="track-info">
-            <div class="track-title">Randomly</div>
-            <div class="track-artist">LUCKI</div>
+            <div class="track-title">True Form Mahito</div>
+            <div class="track-artist">OST</div>
         </div>
         <div class="music-controls">
             <button class="play-btn" id="playBtn"><i class="fas fa-play"></i></button>
@@ -1478,7 +1595,7 @@
     <section class="hero" id="home">
         <div class="hero-content">
             <div class="profile-pic">
-                <img src="https://cdn.discordapp.com/attachments/1394015159554670632/1466881707465511076/image.png?ex=697fad0c&is=697e5b8c&hm=19d3184f09be3dfd51866e1c623a0824c429a4a74ec7a806e539920ed4cebaf2&"
+                <img src="imagevfwefwf.png"
                     alt="Oasis Profile" width="220" height="220" fetchpriority="high">
             </div>
 
@@ -1488,7 +1605,7 @@
                 <div class="stat-card discord-stat">
                     <div class="discord-header-inline">
                         <div style="position: relative;">
-                            <img class="discord-avatar-inline" id="discordAvatar" src="https://cdn.discordapp.com/attachments/1394015159554670632/1466881707465511076/image.png?ex=697fad0c&is=697e5b8c&hm=19d3184f09be3dfd51866e1c623a0824c429a4a74ec7a806e539920ed4cebaf2&" alt="Discord Avatar">
+                            <img class="discord-avatar-inline" id="discordAvatar" src="imagevfwefwf.png" alt="Discord Avatar">
                             <div class="discord-status-inline offline" id="discordStatus"></div>
                         </div>
                         <div class="discord-info-inline">
@@ -1539,7 +1656,7 @@
     <!-- Banner Section -->
     <section class="banner-section">
         <div class="banner-container">
-            <img src="https://cdn.discordapp.com/attachments/1161395614232354987/1467318799870071027/image.png?ex=697ff29f&is=697ea11f&hm=e53e98d2c3171a9c54048cd0d3cfbdd39ae3c8a098cd06f967d987f97033d5d2&"
+            <img src="wedwdwdwe.png"
                 alt="Banner" class="banner-image" loading="lazy">
         </div>
     </section>
@@ -1618,9 +1735,9 @@
             </div>
             
             <div class="contribution-card">
-                <div class="contribution-date">TBA</div>
-                <h4>Type Soul</h4>
-                <p><a href="https://discord.gg/rB2ZhGT3fF" target="_blank">Join Discord</a></p>
+                <div class="contribution-date">2026</div>
+                <h4>Starsine</h4>
+                <p>Backend Systems</p>
             </div>
         </div>
     </section>
@@ -1677,6 +1794,22 @@
     </audio>
 
     <script>
+        // Video Intro
+        const videoIntro = document.getElementById('videoIntro');
+        const introVideo = document.getElementById('introVideo');
+        
+        function skipIntro() {
+            videoIntro.classList.add('hide');
+            setTimeout(() => {
+                videoIntro.style.display = 'none';
+            }, 1000);
+        }
+
+        // Auto-hide intro after video ends
+        introVideo.addEventListener('ended', () => {
+            skipIntro();
+        });
+
         // Music Player
         const backgroundMusic = document.getElementById('backgroundMusic');
         const playBtn = document.getElementById('playBtn');
