--- a/index.html
+++ b/index.html
@@ -54,8 +54,21 @@
         }
 
         .video-intro-overlay.hide {
-            animation: washOut 1s ease forwards;
+            animation: washOut 1.2s ease forwards;
             pointer-events: none;
+        }
+
+        .video-intro-overlay.hide .intro-video {
+            animation: videoZoomIn 1.2s ease forwards;
+        }
+
+        @keyframes videoZoomIn {
+            0% {
+                transform: scale(1);
+            }
+            100% {
+                transform: scale(2);
+            }
         }
 
         @keyframes fadeIn {
@@ -72,13 +85,9 @@
                 opacity: 1;
                 transform: scale(1);
             }
-            50% {
-                opacity: 0.7;
-                transform: scale(1.1);
-            }
             100% {
                 opacity: 0;
-                transform: scale(1.3);
+                transform: scale(1.5);
             }
         }
 
@@ -1562,7 +1571,7 @@
     <section class="hero" id="home">
         <div class="hero-content">
             <div class="profile-pic">
-                <img src="imagevfwefwf.png"
+                <img src="imagewfwefwf.png"
                     alt="Oasis Profile" width="220" height="220" fetchpriority="high">
             </div>
 
@@ -1572,7 +1581,7 @@
                 <div class="stat-card discord-stat">
                     <div class="discord-header-inline">
                         <div style="position: relative;">
-                            <img class="discord-avatar-inline" id="discordAvatar" src="imagevfwefwf.png" alt="Discord Avatar">
+                            <img class="discord-avatar-inline" id="discordAvatar" src="imagewfwefwf.png" alt="Discord Avatar">
                             <div class="discord-status-inline offline" id="discordStatus"></div>
                         </div>
                         <div class="discord-info-inline">
@@ -1610,7 +1619,7 @@
                 <a href="#" class="social-link">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="mailto:contact@oasis.com" class="social-link">
+                <a href="/cdn-cgi/l/email-protection#583b37362c393b2c1837392b312b763b3735" class="social-link">
                     <i class="fas fa-envelope"></i>
                 </a>
             </div>
@@ -1757,11 +1766,11 @@
     </div>
 
     <!-- Background Music Audio Element -->
-    <audio id="backgroundMusic" loop>
+    <audio id="backgroundMusic" loop autoplay>
         <source src="music.mp3" type="audio/mpeg">
     </audio>
 
-    <script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         // Video Intro - Auto-hide when video ends (no skip button)
         const videoIntro = document.getElementById('videoIntro');
         const introVideo = document.getElementById('introVideo');
@@ -1781,6 +1790,26 @@
 
         // Set initial volume
         backgroundMusic.volume = 0.5;
+
+        // Aggressively try to autoplay music immediately
+        function tryPlayMusic() {
+            if (backgroundMusic.paused) {
+                backgroundMusic.play().catch(e => {
+                    console.log('Autoplay blocked, will retry on interaction');
+                });
+            }
+        }
+
+        // Try immediately when script loads
+        tryPlayMusic();
+
+        // Try when page fully loads
+        window.addEventListener('load', tryPlayMusic);
+
+        // Try on first any user interaction
+        ['click', 'touchstart', 'keydown'].forEach(event => {
+            document.addEventListener(event, tryPlayMusic, { once: true });
+        });
 
         // Visitor Counter System
         const VISITOR_KEY = 'oasis_total_visits';
@@ -1890,21 +1919,6 @@
             icon.classList.remove('fa-pause');
             icon.classList.add('fa-play');
         });
-
-        // Try to autoplay music on page load
-        window.addEventListener('load', () => {
-            backgroundMusic.play().catch(e => {
-                console.log('Autoplay blocked, user interaction needed');
-            });
-        });
-
-        // Try on first user interaction
-        document.addEventListener('click', function initAudio() {
-            if (backgroundMusic.paused) {
-                backgroundMusic.play().catch(e => console.log('Audio play failed'));
-            }
-            document.removeEventListener('click', initAudio);
-        }, { once: true });
 
         // Smooth Scrolling
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
@@ -2121,11 +2135,4 @@
             uploadArea.addEventListener('drop', function(e) {
                 const dt = e.dataTransfer;
                 const files = dt.files;
-                document.getElementById('fileInput').files = files;
-                handleFileUpload({ target: { files: files } });
-            }, false);
-        }
-    </script>
-</body>
-
-</html>
+                document.getElementById('fileInp
