--- a/index.html
+++ b/index.html
@@ -54,20 +54,22 @@
         }
 
         .video-intro-overlay.hide {
-            animation: washOut 1.2s ease forwards;
+            animation: washOut 1.2s ease-out forwards;
             pointer-events: none;
         }
 
         .video-intro-overlay.hide .intro-video {
-            animation: videoZoomIn 1.2s ease forwards;
+            animation: videoZoomIn 1.2s ease-out forwards;
         }
 
         @keyframes videoZoomIn {
             0% {
                 transform: scale(1);
+                opacity: 1;
             }
             100% {
-                transform: scale(2);
+                transform: scale(2.5);
+                opacity: 0;
             }
         }
 
@@ -85,9 +87,12 @@
                 opacity: 1;
                 transform: scale(1);
             }
+            50% {
+                opacity: 0.5;
+            }
             100% {
                 opacity: 0;
-                transform: scale(1.5);
+                transform: scale(1.2);
             }
         }
 
@@ -1529,6 +1534,9 @@
             <video class="intro-video" id="introVideo" autoplay muted playsinline webkit-playsinline>
                 <source src="clip.mp4" type="video/mp4">
             </video>
+            <div style="position: absolute; bottom: 30px; width: 100%; text-align: center; color: rgba(255,255,255,0.5); font-size: 14px; z-index: 10;">
+                Tap anywhere to continue
+            </div>
         </div>
     </div>
 
@@ -1786,21 +1794,33 @@
         
         // Auto-hide intro after video ends
         introVideo.addEventListener('ended', () => {
+            console.log('Video ended, starting hide animation');
             videoIntro.classList.add('hide');
             setTimeout(() => {
                 videoIntro.style.display = 'none';
+                console.log('Video hidden');
             }, 1200); // Match animation duration
         });
 
-        // Fallback: hide video after 10 seconds if it doesn't end naturally
+        // Fallback: hide video after 8 seconds regardless (in case video doesn't play/end)
         setTimeout(() => {
-            if (videoIntro.style.display !== 'none') {
+            if (videoIntro && !videoIntro.classList.contains('hide')) {
+                console.log('Fallback: forcing video hide after timeout');
                 videoIntro.classList.add('hide');
                 setTimeout(() => {
                     videoIntro.style.display = 'none';
                 }, 1200);
             }
-        }, 10000);
+        }, 8000);
+
+        // Also hide on any click/touch during video
+        videoIntro.addEventListener('click', () => {
+            console.log('Video clicked, hiding');
+            videoIntro.classList.add('hide');
+            setTimeout(() => {
+                videoIntro.style.display = 'none';
+            }, 1200);
+        });
 
         // Music Player
         const backgroundMusic = document.getElementById('backgroundMusic');
