--- a/index.html
+++ b/index.html
@@ -1538,12 +1538,12 @@
 
 <body>
     <!-- Video Intro Overlay -->
-    <div class="video-intro-overlay" id="videoIntro">
-        <div class="video-intro-container">
-            <video class="intro-video" id="introVideo" autoplay muted playsinline webkit-playsinline>
+    <div class="video-intro-overlay" id="videoIntro" style="cursor: pointer;">
+        <div class="video-intro-container" style="width: 100%; height: 100%;">
+            <video class="intro-video" id="introVideo" autoplay muted playsinline webkit-playsinline style="pointer-events: none;">
                 <source src="clip.mp4" type="video/mp4">
             </video>
-            <div style="position: absolute; bottom: 50px; width: 100%; text-align: center; color: rgba(255,255,255,0.8); font-size: 18px; z-index: 10; font-weight: 700; text-transform: uppercase; letter-spacing: 2px; animation: pulse 2s infinite;">
+            <div style="position: absolute; bottom: 50px; left: 0; right: 0; width: 100%; text-align: center; color: rgba(255,255,255,0.9); font-size: 20px; z-index: 10; font-weight: 700; text-transform: uppercase; letter-spacing: 2px; animation: pulse 2s infinite; pointer-events: none;">
                 TAP ANYWHERE TO SKIP
             </div>
         </div>
