--- a/index.html
+++ b/index.html
@@ -733,58 +733,70 @@
             color: var(--white);
         }
 
-        /* Banner Section */
-        .banner-section {
-            position: relative;
-            width: 100%;
-            padding: 60px 0;
-            margin: 0;
-            z-index: 1;
-            background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(147, 51, 234, 0.05) 50%, rgba(0, 0, 0, 0) 100%);
-        }
+       /* Banner Section */
+.banner-section {
+    position: relative;
+    width: 100%;
+    padding: 60px 0;
+    margin: 0;
+    z-index: 1;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(147, 51, 234, 0.05) 50%, rgba(0, 0, 0, 0) 100%);
+}
 
-        .banner-container {
-            width: 100%;
-            max-height: 200px;
-            overflow: hidden;
-            position: relative;
-            border-top: 2px solid rgba(147, 51, 234, 0.3);
-            border-bottom: 3px solid rgba(147, 51, 234, 0.5);
-            box-shadow: 0 0 40px rgba(147, 51, 234, 0.3), 0 0 80px rgba(147, 51, 234, 0.1);
-            margin: 0;
-        }
+.banner-container {
+    width: 100%;
+    max-height: 350px;  /* CHANGED FROM 200px to 350px */
+    overflow: hidden;
+    position: relative;
+    border-top: 2px solid rgba(147, 51, 234, 0.3);
+    border-bottom: 3px solid rgba(147, 51, 234, 0.5);
+    box-shadow: 0 0 40px rgba(147, 51, 234, 0.3), 0 0 80px rgba(147, 51, 234, 0.1);
+    margin: 0;
+}
 
-        .banner-image {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-            object-position: center;
-            display: block;
-            filter: brightness(0.85);
-            transition: filter 0.3s ease, transform 0.3s ease;
-            background: var(--bg-black);
-        }
+.banner-image {
+    width: 100%;
+    height: 350px;  /* CHANGED FROM 200px to 350px */
+    object-fit: cover;
+    object-position: center;
+    display: block;
+    filter: brightness(0.85);
+    transition: filter 0.3s ease, transform 0.3s ease;
+    background: var(--bg-black);
+}
 
-        .banner-container:hover .banner-image {
-            filter: brightness(1);
-            transform: scale(1.02);
-        }
+.banner-container:hover .banner-image {
+    filter: brightness(1);
+    transform: scale(1.02);
+}
 
-        .banner-container::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: linear-gradient(90deg, 
-                rgba(147, 51, 234, 0.1) 0%, 
-                transparent 20%, 
-                transparent 80%, 
-                rgba(147, 51, 234, 0.1) 100%);
-            pointer-events: none;
-            z-index: 1;
-        }
+.banner-container::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(90deg, 
+        rgba(147, 51, 234, 0.1) 0%, 
+        transparent 20%, 
+        transparent 80%, 
+        rgba(147, 51, 234, 0.1) 100%);
+    pointer-events: none;
+    z-index: 1;
+}
+
+/* Mobile Responsive - Banner */
+@media (max-width: 768px) {
+    .banner-container {
+        max-height: 200px;  /* CHANGED FROM 150px to 200px for better mobile view */
+        margin: 0;
+    }
+    
+    .banner-image {
+        height: 200px;  /* CHANGED FROM 150px to 200px */
+    }
+}
 
         /* Section Styles */
         section {
@@ -2186,3 +2198,4 @@
     </script>
 </body>
 </html>
+
